# CodeLens

./: .env.example  .gitignore  .vscodeignore  DEMO.md  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml  setup.sh  start.sh  tsconfig.json
backend/: config.py  db_client.py  indexer.py  main.py  query.py  tree_sitter_parser.py
extension/media/: panel.html
extension/src/: extension.ts  searchPanel.ts
shared/: types.py  types.ts
