[project]
name = "codelens-backend"
version = "0.1.0"
description = "FastAPI backend for CodeLens"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.4",
    "ollama>=0.1.7",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "watchdog>=4.0.0",
    "rich>=13.7.1",
    "actian-vectorai-db-beta>=0.1.0",
    "python-dotenv>=1.0.1"
]
requires-python = ">=3.10"
