[project]
name = "codelens-backend"
version = "0.2.0"
description = "Offline semantic codebase search powered by Actian VectorAI DB"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.4",
    "ollama>=0.5.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python",
    "tree-sitter-typescript",
    "tree-sitter-javascript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "watchdog>=4.0.0",
    "rich>=13.7.1",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.1"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
